refactoring to evalutate change and then send events